<resources>
    <string name="app_name">Animation</string>
    <string name="sub_repair_title">报事报修</string>
    <string name="sub_repair_subTitle">家里水管漏了；楼道灯坏了…</string>
    <string name="sub_neighbor_title">邻里圈</string>
    <string name="sub_neighbor_subTitle">小区动态，一手掌握</string>
    <string name="sub_second_hand_title">二手闲置</string>
    <string name="sub_second_hand_subTitle">让手里的闲置宝贝找到新主人</string>
    <string name="sub_posts_title">社区新鲜事</string>
    <string name="sub_posts_subTitle">和邻居们分享周边的新鲜事</string>
</resources>
