<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom"
    android:paddingBottom="@dimen/large"
    android:orientation="vertical">

    <com.littlejie.animation.SubActionView
        android:id="@+id/sub_repair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/icon_fab_repair"
        app:subTitle="@string/sub_repair_subTitle"
        app:title="@string/sub_repair_title" />

    <com.littlejie.animation.SubActionView
        android:id="@+id/sub_neighbor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/icon_fab_neighbor"
        app:subTitle="@string/sub_neighbor_subTitle"
        app:title="@string/sub_neighbor_title" />

    <com.littlejie.animation.SubActionView
        android:id="@+id/sub_second_hand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/icon_fab_second_hand"
        app:subTitle="@string/sub_second_hand_subTitle"
        app:title="@string/sub_second_hand_title" />

    <com.littlejie.animation.SubActionView
        android:id="@+id/sub_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/icon_fab_posts"
        app:subTitle="@string/sub_posts_subTitle"
        app:title="@string/sub_posts_title" />

</LinearLayout>